2002-01-14  Ryan C Yeske  <rcyeske@sfu.ca>

	* nethack-api.el (nethack-api-putstr): Use overlay for highlight.
	Insert newline after text, not before.
	(nethack-api-create-nhwindow): Move code from cond into appropriate
	nethack-api-create-*-window functions.
	(nethack-api-create-menu-window): Make buffer read-only.
	(nethack-api-start-menu): Inhibit read-only.
	(nethack-api-create-message-window): Create highlight overlay.
	(nethack-api-clear-nhwindow): Don't create gamegrid if using glyphs.
	(nethack-api-putstr): Inhibit readonly.

	* nethack.el (nethack): Check for buffer before killing it.

2002-01-13  shawn  <sabetts@vcn.bc.ca>

	* nethack-glyphs.el (nethack-glyph-vector): fix the giant ant image.

2002-01-13  Ryan C Yeske  <rcyeske@sfu.ca>

	* nethack.el (nh-prompt-regexp): New variable.
	(nh-comint-mode): Use above variable.

2002-01-10  Ryan C Yeske  <rcyeske@sfu.ca>

	* nethack.el (nethack-map-glyph-face): Put in nethack-faces group.
	(nethack-use-glyphs): Default to nil.
	(nethack-toggle-glyphs): New function.

	* nethack-api.el (nethack-api-display-nhwindow): Don't wait for a
	key on echo area messages.
	(nethack-menu-item-print, nethack-menu-toggle-item)
	(nethack-menu-toggle-item, nethack-menu-toggle-all-items)
	(nethack-menu-submit, nethack-api-add-menu): Handle prefix arg on
	menu selection.  From sabetts.

	* nethack-cmd.el (redraw-screen): Restore window configuration
	always, only redraw glyphs with a prefix arg.
	(defun-nethack-command): Expand cmdstr in test.

	* nethack-api.el (nethack-restore-window-configuration): Make the
	status window dedicated.

2002-01-01  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack): set nethack-status-alist to nil when
	starting a new nethack game.

2002-01-01    <sabetts@watchman.phalanx.tmp>

	* nethack-api.el (nethack-menu-toggle-all-items): only toggle
	items that have identifiers.
	(nethack-api-update-status): remove CL dependancy for flag
	processing.